--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-exp-mongoo-auth",
+  "name": "node-exp-mongoo-file-upl",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -14,14 +14,15 @@
     "cross-env": "7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "gravatar": "^1.8.2",
+    "jimp": "^0.22.5",
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
     "morgan": "1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "^3.3.4",
-    "nodemailer": "^6.9.1",
-    "passport": "^0.6.0",
-    "passport-google-oauth": "^2.0.0"
+    "nodemailer": "^6.9.1"
   },
   "devDependencies": {
     "eslint": "7.19.0",
