--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "gravatar": "^1.8.2",
     "jimp": "^0.22.5",
@@ -23,7 +24,8 @@
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^3.3.4",
-    "nodemailer": "^6.9.1"
+    "nodemailer": "^6.9.1",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "eslint": "7.19.0",
